2003-05-07  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-02  Ross Burton  <ross@burtonini.com>

	* configure.in: Generate the Makefile I added last night. Whoops.

2003-04-30  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Require 2.2.0 or newer of libgnomeui
	and gnome-desktop for the icon theme stuff. Fix from Spider and
	aes. Fixes bug #104907.

2003-04-23  Alexander Larsson  <alexl@redhat.com>

	* capplets/Makefile.am: 
	* configure.in:
	* capplets/display/*
	Check for XRandR support.
	Add display capplet.

2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* configure.in: Added "ml" in ALL_LINGUAS.

2003-03-10  Roozbeh Pournader  <roozbeh@sharif.edu>

	* configure.in: Added "fa" to ALL_LINGUAS.

2003-03-04  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* capplets/network/gnome-network-preferences.c:
	(proxy_mode_radiobutton_clicked_cb):
        Set "system/proxy/use_http_proxy" GConf key
	when Manual or
        Auto is selected.


2003-02-22   Laurent Dhima  <laurenti@alblinux.net>
	
	* configure.in: Added 'sq' to ALL_LINGUAS
	
Thu Feb 13 18:51:37 2003  Jonathan Blandford  <jrb@redhat.com>

	* capplets/common/gconf-property-editor.c: (gconf_peditor_new):
	* capplets/common/gnome-theme-info.c: (read_meta_theme),
	(update_theme_index), (update_common_theme_dir_index),
	(top_theme_dir_changed), (top_icon_theme_dir_changed),
	(add_common_theme_dir_monitor), (real_add_top_theme_dir_monitor):
	* capplets/default-applications/gnome-default-applications-properti
	es.c: (initialize_default_applications), (read_editor),
	(read_terminal):
	* capplets/file-types/mime-edit-dialog.c: (fill_dialog):
	* capplets/file-types/mime-type-info.c: (load_all_mime_types):
	* capplets/file-types/mime-types-model.c:
	(mime_types_model_get_value):
	* capplets/font/main.c: (font_render_get_gconf), (enum_group_load):