@@ -1,3 +1,10 @@
+2003-05-12  Marco Pesenti Gritti  <marco@it.gnome.org>
+
+	* capplets/file-types/service-info.c: (service_info_save),
+	(service_info_delete):
+
+	Set the enabled key for new services and unset it on delete
+
 2003-05-07  Jody Goldberg <jody@gnome.org>
 
 	* configure.in : post release version bump
